@@ -37,7 +37,7 @@
                         <arg>--add-exports=jdk.compiler/com.sun.tools.javac.comp=lamia</arg>
                         <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm=lamia</arg>
                         <arg>--add-exports=java.base/jdk.internal.org.objectweb.asm.signature=lamia</arg>
-
+                        <arg>--add-exports=java.base/sun.reflect.annotation=lamia</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
